[package]
name = "stitcher"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["image-processing"]
description = "A utility that stitches 4 images together"
authors = ["Inderjit Gill <email@indy.io>"]

[dependencies]
log = "0.4.0"
env_logger = "0.5.4"
failure = "0.1.1"
clap = "2.31.1"
image = "0.18.0"
